[gd_scene load_steps=13 format=3 uid="uid://dl2ed4gkybggf"]

[ext_resource type="Script" uid="uid://br1k30d32naot" path="res://scripts/player.gd" id="1_ffboj"]
[ext_resource type="PackedScene" uid="uid://dbhmhuyak2l45" path="res://models/Nissan GTR.glb" id="2_3rerk"]
[ext_resource type="PackedScene" uid="uid://c0e27836xgmhi" path="res://objects/character.tscn" id="2_nero3"]
[ext_resource type="Texture2D" uid="uid://8ggihh27mlrr" path="res://sprites/blob_shadow.png" id="3_0c7wt"]
[ext_resource type="ArrayMesh" uid="uid://deu06eho4c74" path="res://meshes/dust.res" id="4_mvhqy"]
[ext_resource type="AudioStream" uid="uid://daf4ywqlvew73" path="res://sounds/skyline_launch.mp3" id="6_i825w"]
[ext_resource type="AudioStream" uid="uid://dl6un5ex1hcn3" path="res://sounds/start-nissan-gtr (mp3cut.net).mp3" id="7_i825w"]

[sub_resource type="BoxShape3D" id="BoxShape3D_3rerk"]
size = Vector3(1, 2.784668, 1.199585)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_q7stj"]
diffuse_mode = 2
specular_mode = 2
metallic_specular = 0.0
backlight = Color(0, 0.521569, 0.709804, 1)
billboard_keep_scale = true
grow_amount = 1.882
proximity_fade_distance = 0.25

[sub_resource type="Curve" id="Curve_xh1e2"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.249284, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_f46kd"]
curve = SubResource("Curve_xh1e2")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_3rerk"]
particle_flag_align_y = true
emission_shape = 1
emission_sphere_radius = 0.2
direction = Vector3(0, 0, 0)
gravity = Vector3(0, 0.1, 0)
scale_min = 0.75
scale_curve = SubResource("CurveTexture_f46kd")

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_ffboj")

[node name="Collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 0.01171875, 0.35364994, -0.005249019)
shape = SubResource("BoxShape3D_3rerk")

[node name="Nissan GTR" parent="." instance=ExtResource("2_3rerk")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)

[node name="Character" parent="." instance=ExtResource("2_nero3")]
visible = false

[node name="character" parent="Character" index="0"]
visible = false

[node name="root" parent="Character/character" index="0"]
visible = false

[node name="leg-left" parent="Character/character/root" index="0"]
transform = Transform3D(0.96592593, 0, 0.2588191, 0, 1, 0, -0.2588191, 0, 0.96592593, 0.125, 0.17625, -0.02375)
visible = false

[node name="leg-right" parent="Character/character/root" index="1"]
transform = Transform3D(0.96592593, 0, -0.2588191, 0, 1, 0, 0.2588191, 0, 0.96592593, -0.125, 0.17625, -0.023750002)
visible = false

[node name="torso" parent="Character/character/root" index="2"]
transform = Transform3D(1, 0, 0, 0, 0.996194, 0.08715568, 0, -0.08715568, 0.996194, -1.80478e-15, 0.17625, -0.02375)
visible = false

[node name="arm-left" parent="Character/character/root/torso" index="0"]
transform = Transform3D(0.70710695, 0.70710695, 0, -0.70710695, 0.70710695, 0, 0, 0, 1, 0.3, 0.175, 0)
visible = false

[node name="arm-right" parent="Character/character/root/torso" index="1"]
transform = Transform3D(0.70710695, -0.70710695, 0, 0.70710695, 0.70710695, 0, 0, 0, 1, -0.3, 0.1195, 0)
visible = false

[node name="antenna" parent="Character/character/root/torso" index="2"]
visible = false

[node name="Shadow" type="Decal" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.9, 0)
size = Vector3(1, 2, 1)
texture_albedo = ExtResource("3_0c7wt")
modulate = Color(1, 1, 1, 0.705882)
normal_fade = 0.5

[node name="TurboParticles" type="GPUParticles3D" parent="."]
physics_interpolation_mode = 2
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.4870727)
material_override = SubResource("StandardMaterial3D_q7stj")
cast_shadow = 0
amount = 60
fixed_fps = 0
process_material = SubResource("ParticleProcessMaterial_3rerk")
draw_pass_1 = ExtResource("4_mvhqy")

[node name="TurboSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("6_i825w")

[node name="EngineSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("7_i825w")
autoplay = true

[editable path="Character"]
